--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="check_label">\n\nFind Your Legislators</string>
     <string name="polling_label">\nFind Your Polling Place</string>
     <string name="results_label">2016 Election Results</string>
+    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
+    <string name="settings_menu_item">Settings</string>
+    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
+    <string name="settings_title">User Preferences</string>
+    <!-- Strings For Push Notification Preference [CHAR LIMIT=30] -->
+    <string name="settings_push_notification_label">Push Notifications</string>
+    <string name="settings_push_notification_key" translatable="false">push_notifications</string>
+    <string name="settings_push_notification_default" translatable="false">1</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
