--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="settings_push_notification_key" translatable="false">push_notifications</string>
     <string name="settings_push_notification_default" translatable="false">1</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="upcoming_elections">Upcoming Elections</string>
+    <string name="check_registration"><a href="https://sos.iowa.gov/elections/voterreg/regtovote/search.aspx">Check your registration</a></string>
 </resources>
